# lab4

./: LICENSE  REPORT.md  lab05.yml
.github/workflows/: c-cpp.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: solver.cpp
